new changes made by developer2

--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
 mine first demo project
 mine second demo project
-mine third demo windos project 
+mine third demo windos project
+New change from developer2 on 03/06
+I am from Bangalore
